<resources>
    <string name="app_name">Pesquisa De Opinião</string>
    <string name="main_title">Pesquisa de Opinião</string>
    <string name="main_subtitle">Responda às perguntas referentes à qualidade de ensino do IFSP</string>
    <string name="start_survey">Começar pesquisa</string>
    <string name="check_vote">Checar voto</string>
    <string name="end_survey">Encerrar pesquisa</string>
    <string name="register">Registrar</string>
    <string name="cancel">Cancelar</string>
    <string name="great">Ótimo</string>
    <string name="good">Bom</string>
    <string name="regular">Regular</string>
    <string name="bad">Ruim</string>
    <string name="voting_hint">Escolha uma das opções abaixo</string>
    <string name="vote">Votar</string>
    <string name="copy_hint">Para rastreá-lo, copie o código abaixo:</string>
    <string name="successful_vote">Seu voto foi registrado com sucesso!</string>
    <string name="finalize">Finalizar</string>
    <string name="search">Pesquisar</string>
    <string name="code">Código:</string>
    <string name="regular_votes">Votos para \'Regular\':</string>
    <string name="good_votes">Votos para \'Bom\':</string>
    <string name="great_votes">Votos para \'Ótimo\':</string>
    <string name="bad_votes">Votos para \'Ruim\':</string>
    <string name="exit">Sair</string>
    <string name="total_votes">Votos totais:</string>
</resources>