<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/text_view_title"
        android:text="Como você avalia o curso de ADS?"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_33"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_hint"
        android:text="@string/voting_hint"
        android:textSize="25sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_33"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_hint"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_button_great"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/great" />

        <RadioButton
            android:id="@+id/radio_button_good"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/radio_button_regular"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regular" />

        <RadioButton
            android:id="@+id/radio_button_bad"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_50"
        app:layout_constraintGuide_percent="0.50"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_50"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/vote" />

</androidx.constraintlayout.widget.ConstraintLayout>