<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">
    
    <TextView
        android:id="@+id/text_view_title"
        android:text="@string/main_title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/text_view_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/text_view_subtitle"
        android:text="@string/main_subtitle"
        android:textSize="25sp"
        android:layout_marginBottom="60dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_33"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/button_start_survey"
        android:text="@string/start_survey"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_check_vote"
        android:text="@string/check_vote"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/button_start_survey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_end_survey"
        android:text="@string/end_survey"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/button_check_vote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>