<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.result.ResultActivity">

    <TextView
        android:text="Resultado da pesquisa:"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_33"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_great_votes_label"
        android:text="@string/great_votes"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_33"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_great_votes"
        android:text="10"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/text_view_great_votes_label"
        app:layout_constraintBottom_toBottomOf="@id/text_view_great_votes_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_good_votes_label"
        android:text="@string/good_votes"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_great_votes_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_good_votes"
        android:text="10"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/text_view_good_votes_label"
        app:layout_constraintBottom_toBottomOf="@id/text_view_good_votes_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_regular_votes_label"
        android:text="@string/regular_votes"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_good_votes_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_regular_votes"
        android:text="10"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/text_view_regular_votes_label"
        app:layout_constraintBottom_toBottomOf="@id/text_view_regular_votes_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_bad_votes_label"
        android:text="@string/bad_votes"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_regular_votes_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_view_bad_votes"
        android:text="10"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/text_view_bad_votes_label"
        app:layout_constraintBottom_toBottomOf="@id/text_view_bad_votes_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_66"
        app:layout_constraintGuide_percent="0.66"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_exit"
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_66"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>